--- a/versions/7.2.0/etc/org.ops4j.pax.web.cfg.erb
+++ b/versions/7.2.0/etc/org.ops4j.pax.web.cfg.erb
@@ -15,4 +15,4 @@
 # limitations under the License.
 #
 org.ops4j.pax.web.config.file=etc/jetty.xml
-org.osgi.service.http.port=${OPENSHIFT_FUSE_HTTP_PORT}
+org.osgi.service.http.port=<%= ENV['OPENSHIFT_FUSE_HTTP_PORT'] %>
