--- a/versions/7.3.0/etc/org.ops4j.pax.web.cfg.erb
+++ b/versions/7.3.0/etc/org.ops4j.pax.web.cfg.erb
@@ -16,4 +16,5 @@
 #
 org.ops4j.pax.web.config.file=etc/jetty.xml
 org.osgi.service.http.port=<%= ENV['OPENSHIFT_FUSE_HTTP_PORT'] %>
+org.osgi.service.http.connection.port=80
 org.ops4j.pax.web.listening.addresses=<%= ENV['OPENSHIFT_FUSE_IP'] %>
