Do not use the gear uuid in the host name

--- a/versions/7.3.0/etc/system.properties.erb
+++ b/versions/7.3.0/etc/system.properties.erb
@@ -8,7 +8,7 @@ org.ops4j.pax.logging.DefaultServiceLog.level=ERROR
 #
 # Name of this Karaf instance.
 #
-karaf.name=<%= ENV['OPENSHIFT_APP_NAME'] %>-<%= ENV['OPENSHIFT_GEAR_UUID'] %>
+karaf.name=<%= ENV['OPENSHIFT_APP_NAME'] %>
 
 #
 # Default repository where bundles will be loaded from before using
