--- a/versions/7.3.0/etc/org.ops4j.pax.web.cfg.erb
+++ b/versions/7.3.0/etc/org.ops4j.pax.web.cfg.erb
@@ -14,7 +14,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-org.ops4j.pax.web.config.file=etc/jetty.xml
-org.osgi.service.http.port=<%= ENV['OPENSHIFT_FUSE_HTTP_PORT'] %>
+org.osgi.service.http.port=${env:OPENSHIFT_FUSE_HTTP_PORT}
+javax.servlet.context.tempdir=${karaf.data}/pax-web-jsp
+org.ops4j.pax.web.config.url=profile:jetty.xml
+org.ops4j.pax.web.config.checksum=${checksum:profile\:jetty.xml}
+org.ops4j.pax.web.listening.addresses=${zk:${karaf.name}/bindaddress}
 org.osgi.service.http.connection.port=80
-org.ops4j.pax.web.listening.addresses=<%= ENV['OPENSHIFT_FUSE_IP'] %>
