Minor space fixes and additional comments

--- a/versions/7.3.0/etc/system.properties.erb
+++ b/versions/7.3.0/etc/system.properties.erb
@@ -106,6 +106,9 @@ webconsole.jmx.password=${activemq.jmx.password}
 webconsole.jms.user=${activemq.jmx.user}
 webconsole.jms.password=${activemq.jmx.password}
 
+#
+# Fabric configuration
+#
 ensemble.auto.start=false
 agent.auto.start=true
 bind.address=<%= ENV['OPENSHIFT_FUSE_IP'] %>
