Open karaf ssh port to public

--- a/versions/1.0.0/etc/org.apache.karaf.shell.cfg.erb
+++ b/versions/1.0.0/etc/org.apache.karaf.shell.cfg.erb
@@ -25,6 +25,7 @@
 # Via sshPort and sshHost you define the address you can login into Karaf.
 #
 sshPort=<%= ENV['OPENSHIFT_FUSE_SSH_PORT'] %>
+sshConnectionPort=<%= ENV['OPENSHIFT_FUSE_SSH_PROXY_PORT'] %>
 sshHost=<%= ENV['OPENSHIFT_FUSE_IP'] %>
 
 #
