Fixes ENTESB-1712: OSE karaf rmi server binds to 0.0.0.0:44444 instead of the gear IP address

--- a/versions/1.0.0/etc/org.apache.karaf.management.cfg.erb
+++ b/versions/1.0.0/etc/org.apache.karaf.management.cfg.erb
@@ -32,8 +32,9 @@ rmiRegistryPort = <%= ENV['OPENSHIFT_FUSE_RMI_REGISTRY_PORT'] %>
 rmiRegistryHost = <%= ENV['OPENSHIFT_FUSE_IP'] %>
 
 #
-# Port number for RMI server connection
+# Host and Port number for RMI server connection
 #
+rmiServerHost = <%= ENV['OPENSHIFT_FUSE_IP'] %>
 rmiServerPort = <%= ENV['OPENSHIFT_FUSE_RMI_SERVER_PORT'] %>
 
 #
