Updating fabric AMQ config to open up on all ports including SSL.

--- a/versions/1.0.0/etc/system.properties.erb
+++ b/versions/1.0.0/etc/system.properties.erb
@@ -121,3 +121,11 @@ org.osgi.service.http.port=<%= ENV['OPENSHIFT_FUSE_HTTP_PORT'] %>
 org.ops4j.pax.web.listening.addresses=<%= ENV['OPENSHIFT_FUSE_IP'] %>
 fabric.environment=openshift
 
+openwire.port=<%= ENV['OPENSHIFT_FUSE_OPENWIRE_PORT'] %>"/>
+mqtt.port=<%= ENV['OPENSHIFT_FUSE_MQTT_PORT'] %>"/>
+amqp.port=<%= ENV['OPENSHIFT_FUSE_AMQP_PORT'] %>"/>
+stomp.port=<%= ENV['OPENSHIFT_FUSE_STOMP_PORT'] %>"/>
+openwire.ssl.port=<%= ENV['OPENSHIFT_FUSE_OPENWIRE_SSL_PORT'] %>"/>
+mqtt.ssl.port=<%= ENV['OPENSHIFT_FUSE_MQTT_SSL_PORT'] %>"/>
+amqp.ssl.port=<%= ENV['OPENSHIFT_FUSE_AMQP_SSL_PORT'] %>"/>
+stomp.ssl.port=<%= ENV['OPENSHIFT_FUSE_STOMP_SSL_PORT'] %>"
