--- a/versions/1.0.0/fabric/import/fabric/configs/versions/1.0/profiles/openshift/io.fabric8.openshift.properties.erb
+++ b/versions/1.0.0/fabric/import/fabric/configs/versions/1.0/profiles/openshift/io.fabric8.openshift.properties.erb
@@ -1,4 +1,4 @@
 serverUrl=<%= ENV['OPENSHIFT_BROKER_HOST'] %>
 login=
 password=
-default.cartridge.url=id:<%= ENV['OPENSHIFT_FUSE_IDENT'].split(':')[1] + "-" + ENV['OPENSHIFT_FUSE_IDENT'].split(':')[2] %>
+default.cartridge.url=id:fuse-<%= ENV['OPENSHIFT_FUSE_IDENT'].split(':')[2] %>
