--- a/versions/1.0.0/etc/system.properties.erb
+++ b/versions/1.0.0/etc/system.properties.erb
@@ -115,7 +115,7 @@ bind.address=<%= ENV['OPENSHIFT_FUSE_IP'] %>
 publichostname=<%= ENV['OPENSHIFT_GEAR_DNS'] %>
 global.resolver=publichostname
 local.resolver=publichostname
-profiles=hawtio openshift
+profiles=hawtio openshift mq-broker-default.<%= ENV['OPENSHIFT_APP_NAME'] %>
 org.osgi.service.http.connection.port=80
 org.osgi.service.http.port=<%= ENV['OPENSHIFT_FUSE_HTTP_PORT'] %>
 org.ops4j.pax.web.listening.addresses=<%= ENV['OPENSHIFT_FUSE_IP'] %>
