--- a/versions/1.0.0/etc/system.properties.erb
+++ b/versions/1.0.0/etc/system.properties.erb
@@ -129,3 +129,18 @@ openwire.ssl.port=<%= ENV['OPENSHIFT_FUSE_OPENWIRE_SSL_PORT'] %>
 mqtt.ssl.port=<%= ENV['OPENSHIFT_FUSE_MQTT_SSL_PORT'] %>
 amqp.ssl.port=<%= ENV['OPENSHIFT_FUSE_AMQP_SSL_PORT'] %>
 stomp.ssl.port=<%= ENV['OPENSHIFT_FUSE_STOMP_SSL_PORT'] %>
+
+app1.port=<%= ENV['OPENSHIFT_FUSE_APP_PORT_1'] %>
+app2.port=<%= ENV['OPENSHIFT_FUSE_APP_PORT_2'] %>
+app3.port=<%= ENV['OPENSHIFT_FUSE_APP_PORT_3'] %>
+app1.public.port=<%= ENV['OPENSHIFT_FUSE_APP_PORT_1_PROXY_PORT'] %>
+app2.public.port=<%= ENV['OPENSHIFT_FUSE_APP_PORT_2_PROXY_PORT'] %>
+app3.public.port=<%= ENV['OPENSHIFT_FUSE_APP_PORT_3_PROXY_PORT'] %>
+app1.tls.port=<%= ENV['OPENSHIFT_FUSE_APP_TLS_PORT_1'] %>
+app2.tls.port=<%= ENV['OPENSHIFT_FUSE_APP_TLS_PORT_2'] %>
+app3.tls.port=<%= ENV['OPENSHIFT_FUSE_APP_TLS_PORT_3'] %>
+app1.tls.public.port=<%= ENV['OPENSHIFT_FUSE_APP_TLS_PORT_1_PROXY_PORT'] %>
+app2.tls.public.port=<%= ENV['OPENSHIFT_FUSE_APP_TLS_PORT_1_PROXY_PORT'] %>
+app3.tls.public.port=<%= ENV['OPENSHIFT_FUSE_APP_TLS_PORT_1_PROXY_PORT'] %>
+
+
