--- a/versions/1.0.0/etc/org.ops4j.pax.web.cfg.erb
+++ b/versions/1.0.0/etc/org.ops4j.pax.web.cfg.erb
@@ -16,7 +16,6 @@
 #
 org.osgi.service.http.port=${env:OPENSHIFT_FUSE_HTTP_PORT}
 javax.servlet.context.tempdir=${karaf.data}/pax-web-jsp
-org.ops4j.pax.web.config.url=profile:jetty.xml
-org.ops4j.pax.web.config.checksum=${checksum:profile\:jetty.xml}
+org.ops4j.pax.web.config.file=etc/jetty.xml
 org.ops4j.pax.web.listening.addresses=${zk:${karaf.name}/bindaddress}
 org.osgi.service.http.connection.port=80
