--- a/etc/rhcloud.settings.xml.erb
+++ b/etc/rhcloud.settings.xml.erb
@@ -1,5 +1,5 @@
 <settings>
-  <localRepository><%= ENV['OPENSHIFT_DEPENDENCIES_DIR'] %>.m2/repository</localRepository>
+  <localRepository><%= ENV['OPENSHIFT_MVNRPO_DIR'] %>/repository</localRepository>
   <mirrors>
     <mirror>
       <id>nexus</id>
@@ -8,26 +8,6 @@
     </mirror>
   </mirrors>
   <profiles>
-    <profile>
-      <id>openshift</id>
-      <repositories>
-        <repository>
-          <id>fuse-server</id>
-          <url>file:<%= ENV['OPENSHIFT_PRIMARY_CARTRIDGE_DIR'] %>container/system</url>
-          <releases><enabled>true</enabled></releases>
-          <snapshots><enabled>true</enabled></snapshots>
-        </repository>
-      </repositories>
-      <pluginRepositories>
-        <pluginRepository>
-          <id>fuse-server</id>
-          <url>file:<%= ENV['OPENSHIFT_PRIMARY_CARTRIDGE_DIR'] %>container/system</url>
-          <releases><enabled>true</enabled></releases>
-          <snapshots><enabled>true</enabled></snapshots>
-        </pluginRepository>
-      </pluginRepositories>
-    </profile>
-    
     <profile>
       <id>nexus</id>
       <repositories>
