--- a/etc/httpd.conf.erb
+++ b/etc/httpd.conf.erb
@@ -54,7 +54,7 @@ ServerTokens OS
 #
 # Do NOT add a slash at the end of the directory path.
 #
-ServerRoot "<%= ENV['OPENSHIFT_MVNRPO_DIR'] %>"
+ServerRoot "<%= ENV['OPENSHIFT_MVNREPO_DIR'] %>"
 
 #
 # PidFile: The file in which the server should record its process
