--- a/etc/settings.xml.erb
+++ b/etc/settings.xml.erb
@@ -1,3 +1,3 @@
 <settings>
-  <localRepository><%= ENV['OPENSHIFT_MVNRPO_DIR'] %>/repository</localRepository>
+  <localRepository><%= ENV['OPENSHIFT_DEPENDENCIES_DIR'] %></localRepository>
 </settings>
