--- a/etc/httpd.conf.erb
+++ b/etc/httpd.conf.erb
@@ -54,7 +54,7 @@ ServerTokens OS
 #
 # Do NOT add a slash at the end of the directory path.
 #
-ServerRoot "<%= ENV['OPENSHIFT_MVNREPO_DIR'] %>"
+ServerRoot "<%= ENV['OPENSHIFT_DEPENDENCIES_DIR'] %>"
 
 #
 # PidFile: The file in which the server should record its process
@@ -145,74 +145,74 @@ Listen <%= ENV['OPENSHIFT_MVNREPO_IP']%>:<%= ENV['OPENSHIFT_MVNREPO_PORT'] %>
 # to be loaded here.
 #
 # Example:
-# LoadModule foo_module modules/mod_foo.so
+# LoadModule foo_module /etc/httpd/modules/mod_foo.so
 #
-LoadModule auth_basic_module modules/mod_auth_basic.so
-LoadModule auth_digest_module modules/mod_auth_digest.so
-LoadModule authn_file_module modules/mod_authn_file.so
-LoadModule authn_alias_module modules/mod_authn_alias.so
-LoadModule authn_anon_module modules/mod_authn_anon.so
-LoadModule authn_dbm_module modules/mod_authn_dbm.so
-LoadModule authn_default_module modules/mod_authn_default.so
-LoadModule authz_host_module modules/mod_authz_host.so
-LoadModule authz_user_module modules/mod_authz_user.so
-LoadModule authz_owner_module modules/mod_authz_owner.so
-LoadModule authz_groupfile_module modules/mod_authz_groupfile.so
-LoadModule authz_dbm_module modules/mod_authz_dbm.so
-LoadModule authz_default_module modules/mod_authz_default.so
-LoadModule ldap_module modules/mod_ldap.so
-LoadModule authnz_ldap_module modules/mod_authnz_ldap.so
-LoadModule include_module modules/mod_include.so
-LoadModule log_config_module modules/mod_log_config.so
-LoadModule logio_module modules/mod_logio.so
-LoadModule env_module modules/mod_env.so
-LoadModule ext_filter_module modules/mod_ext_filter.so
-LoadModule mime_magic_module modules/mod_mime_magic.so
-LoadModule expires_module modules/mod_expires.so
-LoadModule deflate_module modules/mod_deflate.so
-LoadModule headers_module modules/mod_headers.so
-LoadModule usertrack_module modules/mod_usertrack.so
-LoadModule setenvif_module modules/mod_setenvif.so
-LoadModule mime_module modules/mod_mime.so
-LoadModule dav_module modules/mod_dav.so
-LoadModule status_module modules/mod_status.so
-LoadModule autoindex_module modules/mod_autoindex.so
-LoadModule info_module modules/mod_info.so
-LoadModule dav_fs_module modules/mod_dav_fs.so
-LoadModule vhost_alias_module modules/mod_vhost_alias.so
-LoadModule negotiation_module modules/mod_negotiation.so
-LoadModule dir_module modules/mod_dir.so
-LoadModule actions_module modules/mod_actions.so
-LoadModule speling_module modules/mod_speling.so
-LoadModule userdir_module modules/mod_userdir.so
-LoadModule alias_module modules/mod_alias.so
-LoadModule substitute_module modules/mod_substitute.so
-LoadModule rewrite_module modules/mod_rewrite.so
-LoadModule proxy_module modules/mod_proxy.so
-LoadModule proxy_balancer_module modules/mod_proxy_balancer.so
-LoadModule proxy_ftp_module modules/mod_proxy_ftp.so
-LoadModule proxy_http_module modules/mod_proxy_http.so
-LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
-LoadModule proxy_connect_module modules/mod_proxy_connect.so
-LoadModule cache_module modules/mod_cache.so
-LoadModule suexec_module modules/mod_suexec.so
-LoadModule disk_cache_module modules/mod_disk_cache.so
-LoadModule cgi_module modules/mod_cgi.so
-LoadModule version_module modules/mod_version.so
+LoadModule auth_basic_module /etc/httpd/modules/mod_auth_basic.so
+LoadModule auth_digest_module /etc/httpd/modules/mod_auth_digest.so
+LoadModule authn_file_module /etc/httpd/modules/mod_authn_file.so
+LoadModule authn_alias_module /etc/httpd/modules/mod_authn_alias.so
+LoadModule authn_anon_module /etc/httpd/modules/mod_authn_anon.so
+LoadModule authn_dbm_module /etc/httpd/modules/mod_authn_dbm.so
+LoadModule authn_default_module /etc/httpd/modules/mod_authn_default.so
+LoadModule authz_host_module /etc/httpd/modules/mod_authz_host.so
+LoadModule authz_user_module /etc/httpd/modules/mod_authz_user.so
+LoadModule authz_owner_module /etc/httpd/modules/mod_authz_owner.so
+LoadModule authz_groupfile_module /etc/httpd/modules/mod_authz_groupfile.so
+LoadModule authz_dbm_module /etc/httpd/modules/mod_authz_dbm.so
+LoadModule authz_default_module /etc/httpd/modules/mod_authz_default.so
+LoadModule ldap_module /etc/httpd/modules/mod_ldap.so
+LoadModule authnz_ldap_module /etc/httpd/modules/mod_authnz_ldap.so
+LoadModule include_module /etc/httpd/modules/mod_include.so
+LoadModule log_config_module /etc/httpd/modules/mod_log_config.so
+LoadModule logio_module /etc/httpd/modules/mod_logio.so
+LoadModule env_module /etc/httpd/modules/mod_env.so
+LoadModule ext_filter_module /etc/httpd/modules/mod_ext_filter.so
+LoadModule mime_magic_module /etc/httpd/modules/mod_mime_magic.so
+LoadModule expires_module /etc/httpd/modules/mod_expires.so
+LoadModule deflate_module /etc /httpd/modules/mod_deflate.so
+LoadModule headers_module /etc/httpd/modules/mod_headers.so
+LoadModule usertrack_module /etc/httpd/modules/mod_usertrack.so
+LoadModule setenvif_module /etc/httpd/modules/mod_setenvif.so
+LoadModule mime_module /etc/httpd/modules/mod_mime.so
+LoadModule dav_module /etc/httpd/modules/mod_dav.so
+LoadModule status_module /etc/httpd/modules/mod_status.so
+LoadModule autoindex_module /etc/httpd/modules/mod_autoindex.so
+LoadModule info_module /etc/httpd/modules/mod_info.so
+LoadModule dav_fs_module /etc/httpd/modules/mod_dav_fs.so
+LoadModule vhost_alias_module /etc/httpd/modules/mod_vhost_alias.so
+LoadModule negotiation_module /etc/httpd/modules/mod_negotiation.so
+LoadModule dir_module /etc/httpd/modules/mod_dir.so
+LoadModule actions_module /etc/httpd/modules/mod_actions.so
+LoadModule speling_module /etc/httpd/modules/mod_speling.so
+LoadModule userdir_module /etc/httpd/modules/mod_userdir.so
+LoadModule alias_module /etc/httpd/modules/mod_alias.so
+LoadModule substitute_module /etc/httpd/modules/mod_substitute.so
+LoadModule rewrite_module /etc/httpd/modules/mod_rewrite.so
+LoadModule proxy_module /etc/httpd/modules/mod_proxy.so
+LoadModule proxy_balancer_module /etc/httpd/modules/mod_proxy_balancer.so
+LoadModule proxy_ftp_module /etc/httpd/modules/mod_proxy_ftp.so
+LoadModule proxy_http_module /etc/httpd/modules/mod_proxy_http.so
+LoadModule proxy_ajp_module /etc/httpd/modules/mod_proxy_ajp.so
+LoadModule proxy_connect_module /etc/httpd/modules/mod_proxy_connect.so
+LoadModule cache_module /etc/httpd/modules/mod_cache.so
+LoadModule suexec_module /etc/httpd/modules/mod_suexec.so
+LoadModule disk_cache_module /etc/httpd/modules/mod_disk_cache.so
+LoadModule cgi_module /etc/httpd/modules/mod_cgi.so
+LoadModule version_module /etc/httpd/modules/mod_version.so
 
 #
 # The following modules are not loaded by default:
 #
-#LoadModule asis_module modules/mod_asis.so
-#LoadModule authn_dbd_module modules/mod_authn_dbd.so
-#LoadModule cern_meta_module modules/mod_cern_meta.so
-#LoadModule cgid_module modules/mod_cgid.so
-#LoadModule dbd_module modules/mod_dbd.so
-#LoadModule dumpio_module modules/mod_dumpio.so
-#LoadModule filter_module modules/mod_filter.so
-#LoadModule ident_module modules/mod_ident.so
-#LoadModule log_forensic_module modules/mod_log_forensic.so
-#LoadModule unique_id_module modules/mod_unique_id.so
+#LoadModule asis_module /etc/httpd/modules/mod_asis.so
+#LoadModule authn_dbd_module /etc/httpd/modules/mod_authn_dbd.so
+#LoadModule cern_meta_module /etc/httpd/modules/mod_cern_meta.so
+#LoadModule cgid_module /etc/httpd/modules/mod_cgid.so
+#LoadModule dbd_module /etc/httpd/modules/mod_dbd.so
+#LoadModule dumpio_module /etc/httpd/modules/mod_dumpio.so
+#LoadModule filter_module /etc/httpd/modules/mod_filter.so
+#LoadModule ident_module /etc/httpd/modules/mod_ident.so
+#LoadModule log_forensic_module /etc/httpd/modules/mod_log_forensic.so
+#LoadModule unique_id_module /etc/httpd/modules/mod_unique_id.so
 #
 
 #
