--- a/etc/httpd.conf.erb
+++ b/etc/httpd.conf.erb
@@ -169,7 +169,7 @@ LoadModule env_module /etc/httpd/modules/mod_env.so
 LoadModule ext_filter_module /etc/httpd/modules/mod_ext_filter.so
 LoadModule mime_magic_module /etc/httpd/modules/mod_mime_magic.so
 LoadModule expires_module /etc/httpd/modules/mod_expires.so
-LoadModule deflate_module /etc /httpd/modules/mod_deflate.so
+LoadModule deflate_module /etc/httpd/modules/mod_deflate.so
 LoadModule headers_module /etc/httpd/modules/mod_headers.so
 LoadModule usertrack_module /etc/httpd/modules/mod_usertrack.so
 LoadModule setenvif_module /etc/httpd/modules/mod_setenvif.so
