--- a/etc/httpd.conf.erb
+++ b/etc/httpd.conf.erb
@@ -481,7 +481,7 @@ HostnameLookups Off
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-ErrorLog logs/error_log
+ErrorLog <%= ENV['OPENSHIFT_LOG_DIR'] %>error_log
 
 #
 # LogLevel: Control the number of messages logged to the error_log.
@@ -523,7 +523,7 @@ LogFormat "%{User-agent}i" agent
 # For a single logfile with access, agent, and referer information
 # (Combined Logfile Format), use the following directive:
 #
-CustomLog logs/access_log combined
+CustomLog <%= ENV['OPENSHIFT_LOG_DIR'] %>access_log combined
 
 #
 # Optionally add a line containing the server version and virtual host
