use the right directory

--- a/etc/rhcloud.settings.xml.erb
+++ b/etc/rhcloud.settings.xml.erb
@@ -1,5 +1,5 @@
 <settings>
-  <localRepository><%= ENV['OPENSHIFT_MVNRPO_DIR'] %>/repository</localRepository>
+  <localRepository><%= ENV['OPENSHIFT_DEPENDENCIES_DIR'] %></localRepository>
   <mirrors>
     <mirror>
       <id>nexus</id>
