Implements ENTESB-1996: Support users configuring the http security

--- a/etc/httpd.conf.erb
+++ b/etc/httpd.conf.erb
@@ -1008,3 +1008,5 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #    ErrorLog logs/dummy-host.example.com-error_log
 #    CustomLog logs/dummy-host.example.com-access_log common
 #</VirtualHost>
+
+Include "<%= ENV['OPENSHIFT_REPO_DIR']%>.openshift/httpd.conf"
