--- a/template/pom.xml
+++ b/template/pom.xml
@@ -22,14 +22,14 @@
         <artifactId>jboss-quickstarts-fuse-parent</artifactId>
         <version>6.1.0.redhat-379</version>
     </parent>
-    
+
     <!--
         The parent POM does not contain any information required to build this example, it's only here
         for organisational purposes so feel free to remove/replace this.
     -->
     <groupId>org.jboss.quickstarts.fuse</groupId>
     <artifactId>rest</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-${build.number.padded}</version>
     <packaging>bundle</packaging>
     <name>JBoss Fuse Quickstart: rest</name>
     <description>RESTful WebService Example using JAX-RS with JBoss Fuse</description>
@@ -103,10 +103,11 @@
       <url>https://github.com/jboss-fuse/fuse/tree/master/quickstarts/rest</url>
     </scm>
     <properties>
-        <!-- 
+        <!--
           Explicitly declaring the source encoding eliminates the following message:
           [WARNING] Using platform encoding (UTF-8 actually) to copy filtered resources, i.e. build is platform dependent!
         -->
+        <build.number.padded>SNAPSHOT</build.number.padded>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <skipTests>true</skipTests>
         <!-- maven-compiler-plugin -->
@@ -117,7 +118,7 @@
         <!-- the version of the JBoss Fuse BOM, defining all the dependency versions -->
         <jboss.fuse.bom.version>1.0.0-SNAPSHOT</jboss.fuse.bom.version>
     </properties>
-    
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -176,7 +177,7 @@
             <version>1.3.0</version>
             <optional>true</optional>
         </dependency>
- 
+
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-frontend-jaxrs</artifactId>
@@ -186,7 +187,7 @@
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
-            
+
             <!-- Skip Test by default and enable them only in Test profile -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -211,7 +212,7 @@
                             javax.ws.rs.core,
                             javax.xml.bind.annotation,
                             org.osgi.service.blueprint,
-                            com.wordnik.swagger.jaxrs.config, 
+                            com.wordnik.swagger.jaxrs.config,
                             com.wordnik.swagger.jaxrs.listing,
                             com.wordnik.swagger.annotations,
                             com.fasterxml.jackson.annotation, com.fasterxml.jackson.core, com.fasterxml.jackson.databind, com.fasterxml.jackson.jaxrs.json, javax.ws.rs.ext,*
@@ -220,7 +221,7 @@
                             com.wordnik.swagger.sample.resource,
                             org.jboss.quickstarts.fuse.rest
                         </Export-Package>
-                        
+
                     </instructions>
                 </configuration>
             </plugin>
@@ -256,7 +257,7 @@
             </build>
 
         </profile>
-        
+
         <profile>
             <id>openshift</id>
             <properties>
@@ -279,7 +280,7 @@
                                   <goal>deploy</goal>
                               </goals>
                           </execution>
-                      </executions>                
+                      </executions>
                   </plugin>
               </plugins>
           </build>
