Fixes ENTESB-2027: Secuirty+scaling breaks repository access

--- a/etc/rhcloud.settings.xml.erb
+++ b/etc/rhcloud.settings.xml.erb
@@ -1,5 +1,5 @@
 <settings>
-  <localRepository><%= ENV['OPENSHIFT_DEPENDENCIES_DIR'] %></localRepository>
+  <localRepository><%= ENV['OPENSHIFT_DEPENDENCIES_DIR'] %>repo</localRepository>
   <servers>
     <server>
       <id>fabric8.upload.repo</id>
