Fixes ENTESB-2041: There're errors in error_log for Fuse Builder cartridge.

--- a/etc/httpd.conf.erb
+++ b/etc/httpd.conf.erb
@@ -443,7 +443,7 @@ DefaultType text/plain
 #
 <IfModule mod_mime_magic.c>
 #   MIMEMagicFile /usr/share/magic.mime
-    MIMEMagicFile conf/magic
+    MIMEMagicFile /etc/httpd/conf/magic
 </IfModule>
 
 #
