--- a/etc/settings.xml.erb
+++ b/etc/settings.xml.erb
@@ -11,7 +11,7 @@
     <profile>
       <id>openshift</id>
       <properties>
-        <fabric8.jolokiaUrl>http://<%= ENV['OPENSHIFT_FUSE_DOMAIN_DNS'] %>/jolokia</fabric8.jolokiaUrl>
+        <fabric8.jolokiaUrl>http://<%= ENV['OPENSHIFT_FUSE_DOMAIN_DNS'] %>:<%= ENV['OPENSHIFT_FUSE_DOMAIN_HTTP_PORT'] %>/jolokia</fabric8.jolokiaUrl>
       </properties>
     </profile>
   </profiles>
