Fixes ENTESB-2042: .openshift/httpd.conf should not be in git repo for Jboss Builder Cartridge

--- a/etc/httpd.conf.erb
+++ b/etc/httpd.conf.erb
@@ -1009,4 +1009,4 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #    CustomLog logs/dummy-host.example.com-access_log common
 #</VirtualHost>
 
-Include "<%= ENV['OPENSHIFT_REPO_DIR']%>.openshift/httpd.conf"
+Include "<%= ENV['OPENSHIFT_REPO_DIR']%>.openshift/config/httpd.conf"
