[ENTESB-2057] Add Slf4j dependency to clear warning under Maven 3.0.x

--- a/template/pom.xml
+++ b/template/pom.xml
@@ -281,6 +281,13 @@
                               </goals>
                           </execution>
                       </executions>
+                      <dependencies>
+                          <dependency>
+                              <groupId>org.slf4j</groupId>
+                              <artifactId>slf4j-simple</artifactId>
+                              <version>${slf4j-version}</version>
+                          </dependency>
+                      </dependencies>
                   </plugin>
               </plugins>
           </build>
