[ENTESB-2469] Switch to JDK-provided TransformerFactory

--- a/versions/6.2/etc/system.properties.erb
+++ b/versions/6.2/etc/system.properties.erb
@@ -44,7 +44,7 @@ jline.nobell=true
 org.apache.servicemic.specs.debug=false
 
 #javax.xml.parsers.DocumentBuilderFactory=org.apache.xerces.jaxp.DocumentBuilderFactoryImpl
-javax.xml.transform.TransformerFactory=org.apache.xalan.processor.TransformerFactoryImpl
+#javax.xml.transform.TransformerFactory=org.apache.xalan.processor.TransformerFactoryImpl
 
 #
 # Security properties
