Fixes ENTESB-2108: OSE fuse-builder io.fabric8:fabric8-maven-plugin:1.1.0.CR5 has obsolete 610379 product dependencies

--- a/template/pom.xml
+++ b/template/pom.xml
@@ -271,7 +271,7 @@
                   <plugin>
                       <groupId>io.fabric8</groupId>
                       <artifactId>fabric8-maven-plugin</artifactId>
-                      <version>1.1.0.CR5</version>
+                      <version>1.2.0.redhat-066</version>
                       <executions>
                           <execution>
                               <id>deploy</id>
