--- a/template/pom.xml
+++ b/template/pom.xml
@@ -117,6 +117,7 @@
         <version.maven-bundle-plugin>2.3.4</version.maven-bundle-plugin>
         <!-- the version of the JBoss Fuse BOM, defining all the dependency versions -->
         <jboss.fuse.bom.version>6.2.0.redhat-069</jboss.fuse.bom.version>
+        <fabric.version>1.2.0.redhat-066</fabric.version>
     </properties>
 
     <dependencyManagement>
@@ -271,7 +272,7 @@
                   <plugin>
                       <groupId>io.fabric8</groupId>
                       <artifactId>fabric8-maven-plugin</artifactId>
-                      <version>1.2.0.redhat-066</version>
+                      <version>${fabric.version}</version>
                       <executions>
                           <execution>
                               <id>deploy</id>
