Fixes ENTESB-2653: Removes warning message from AMQ on startup
Remove: WARN apache.activemq.util.IdGenerator could not generate unique stub by using DNS and binding to local port: java.net.BindException Permission denied

--- a/versions/6.2/etc/system.properties.erb
+++ b/versions/6.2/etc/system.properties.erb
@@ -121,6 +121,7 @@ org.osgi.service.http.port=<%= ENV['OPENSHIFT_FUSE_HTTP_PORT'] %>
 org.ops4j.pax.web.listening.addresses=<%= ENV['OPENSHIFT_FUSE_IP'] %>
 fabric.environment=openshift
 
+activemq.idgenerator.port=<%= ENV['OPENSHIFT_FUSE_OPENWIRE_PORT'] %>
 openwire.port=<%= ENV['OPENSHIFT_FUSE_OPENWIRE_PORT'] %>
 mqtt.port=<%= ENV['OPENSHIFT_FUSE_MQTT_PORT'] %>
 amqp.port=<%= ENV['OPENSHIFT_FUSE_AMQP_PORT'] %>
