--- a/versions/6.2/etc/system.properties.erb
+++ b/versions/6.2/etc/system.properties.erb
@@ -121,7 +121,8 @@ org.osgi.service.http.port=<%= ENV['OPENSHIFT_FUSE_HTTP_PORT'] %>
 org.ops4j.pax.web.listening.addresses=<%= ENV['OPENSHIFT_FUSE_IP'] %>
 fabric.environment=openshift
 
-activemq.idgenerator.port=<%= ENV['OPENSHIFT_FUSE_OPENWIRE_PORT'] %>
+activemq.idgenerator.hostname=<%= ENV['OPENSHIFT_GEAR_DNS'] %>
+activemq.idgenerator.localport=1
 openwire.port=<%= ENV['OPENSHIFT_FUSE_OPENWIRE_PORT'] %>
 mqtt.port=<%= ENV['OPENSHIFT_FUSE_MQTT_PORT'] %>
 amqp.port=<%= ENV['OPENSHIFT_FUSE_AMQP_PORT'] %>
