--- a/template/pom.xml
+++ b/template/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.jboss.quickstarts.fuse</groupId>
-        <artifactId>quickstarts-fuse</artifactId>
+        <artifactId>jboss-quickstarts-fuse-parent</artifactId>
         <version>6.2.0.redhat-125</version>
     </parent>
 
